--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body{
+    background-color: black;
+    color: #fff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.counterApp{
+    width: 100%;
+   
+    margin: 0 auto;
+}
+.counterApp article{
+    width: 80%;
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    flex-direction: column;
+
+}
+.counterApp article div{
+    flex-basis: auto;
+    margin: 5px;
+}
+.counterApp h2{
+    font-size: 5em;
+    text-transform: uppercase;
+    font-weight: bold;
+    
+}
+
+button{
+    background-color: royalblue;
+    color: #fff;
+    text-transform: uppercase;
+    margin: 20px 5px;
+    padding: 9px;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+
+
+
+form{  
+    width: 500px;
+    height: 300px;
+    border: 2px solid #999;
+    text-align: left;
 }
